--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard/dashboard.component.less
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard/dashboard.component.less
@@ -1,12 +1,8 @@
 @import '~@spryker/styles/src/lib/themes/default/external-variables.less';
 
-@base-font-family: @font-family;
-
-mp-dashboard {
-    h1 {
-        font: @font-weight-semi-bold @heading-1-font-size @base-font-family;
-        padding-bottom: 52px;
-        color: @ink;
-        margin: 0;
-    }
+.dashboard-title {
+    font-size: @heading-1-font-size;
+    font-weight: @font-weight-semi-bold;
+    margin-bottom: 65px;
+    letter-spacing: 0.2px;
 }
