BO-1410: added dashboard markup

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
@@ -6,9 +6,10 @@
     <ng-content select="[title]"></ng-content>
 </ng-template>
 
-<ng-template #button>
+<ng-template #actions>
     <ng-content select="[actions]"></ng-content>
+    
     <ng-container *ngIf="count">
-        <spy-chips>{{ count }}</spy-chips>
+        <spy-chips color="grey">{{ count }}</spy-chips>
     </ng-container>
 </ng-template>
