--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats-block/dashboard-stats-block.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats-block/dashboard-stats-block.component.html
@@ -1,2 +1,2 @@
-<div *ngIf="name">{{ name }}</div>
-<div *ngIf="count">{{ count }}</div>
+<span *ngIf="count" class="mp-dashboard-stats-block__text mp-dashboard-stats-block__text--count">{{ count }}</span>
+<span *ngIf="name" class="mp-dashboard-stats-block__text">{{ name }}</span>
