--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard/dashboard.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
-<h1 class="dashboard-title">{{ title }}</h1>
+<spy-headline>
+    <h1>{{ title }}</h1>
+</spy-headline>
+
 <ng-content></ng-content>
