BO-1413: PR fixes

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
@@ -4,12 +4,10 @@
 
 <ng-template #title>
     <ng-content select="[title]"></ng-content>
+    
+    <spy-chips *ngIf="count" color="grey">{{ count }}</spy-chips>
 </ng-template>
 
 <ng-template #actions>
     <ng-content select="[actions]"></ng-content>
-    
-    <ng-container *ngIf="count">
-        <spy-chips color="grey">{{ count }}</spy-chips>
-    </ng-container>
 </ng-template>
