--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats-block/dashboard-stats-block.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats-block/dashboard-stats-block.component.html
@@ -1,2 +1,2 @@
-<span *ngIf="count" class="mp-dashboard-stats-block__text mp-dashboard-stats-block__text--count">{{ count }}</span>
-<span *ngIf="name" class="mp-dashboard-stats-block__text">{{ name }}</span>
+<span class="mp-dashboard-stats-block__text mp-dashboard-stats-block__text--count">{{ count }}</span>
+<span class="mp-dashboard-stats-block__text">{{ name }}</span>
