BO-3291: fix chips component modifier (#8580)
BO-3291 Fix Chips component modifier

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
@@ -5,7 +5,7 @@
 <ng-template #title>
     <ng-content select="[title]"></ng-content>
 
-    <spy-chips *ngIf="count" color="grey">{{ count }}</spy-chips>
+    <spy-chips *ngIf="count" color="gray">{{ count }}</spy-chips>
 </ng-template>
 
 <ng-template #actions>
