MP-6214 Fixed base style extendability of UI components. (#9002)
MP-6214 Fixed base style extendability of UI components

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats/dashboard-stats-block/dashboard-stats-block.component.less
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-stats/dashboard-stats-block/dashboard-stats-block.component.less
@@ -5,7 +5,7 @@
 .mp-dashboard-stats-block {
     &__text {
         display: block;
-        font-size: @font-size-base;
+        font-size: @spy-font-size-base;
         font-weight: @font-weight-medium;
         color: @gray-darker;
         line-height: @dashboard-stats-block-text-line-height;
