MP-6859 Fixed page titles (#9426)
MP-6859 Added h1 headline to pages

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
@@ -10,7 +10,7 @@
 
 {% block content %}
     <web-mp-dashboard cloak>
-        <div title>{{ 'Dashboard' | trans }}</div>
+        <h1 title>{{ 'Dashboard' | trans }}</h1>
 
         <div class="spy-row spy-row-gutter-lg">
             {% for dashboardCard in dashboardCards %}
