CC-32215: Agent Assist in Merchant Portal (#10720)
CC-32215 Merchant Portal Agent Assist feature.

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
@@ -4,8 +4,8 @@
 {% extends '@ZedUi/Layout/merchant-layout-main.twig' %}
 {% import _self as view %}
 
-{% block headTitle %}
-    {{ 'Dashboard' | trans }}
+{% block headSubTitle %}
+    {{- 'Dashboard' | trans -}}
 {% endblock %}
 
 {% block content %}
