--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Dashboard/index.twig
@@ -15,7 +15,7 @@
         <div class="spy-row spy-row-gutter-lg">
             {% for dashboardCard in dashboardCards %}
 
-                <div class="spy-col spy-col-gutter-lg">
+                <div class="spy-col spy-col-12 spy-col-xl-6 spy-col-gutter-lg">
                     <web-mp-dashboard-card cloak>
                         <div title class="mp-dashboard-card__heading">
                             {{ dashboardCard.title | raw }}
