CC-36826 Update Angular 20 (#197)
CC-36826 Update Angular to v20

--- a/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
+++ b/src/Spryker/Zed/DashboardMerchantPortalGui/Presentation/Components/app/dashboard-card/dashboard-card.component.html
@@ -5,7 +5,9 @@
 <ng-template #title>
     <ng-content select="[title]"></ng-content>
 
-    <spy-chips *ngIf="count" color="gray">{{ count }}</spy-chips>
+    @if (count) {
+        <spy-chips color="gray">{{ count }}</spy-chips>
+    }
 </ng-template>
 
 <ng-template #actions>
